fix drag and dropping on firefox

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -2,6 +2,7 @@
     width: 200px;
     background: rgba(0,0,0,0.3);
     padding: 10px;
+    display: inline-block;
 }
 
 .boards__title {
