--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -1,3 +1,8 @@
+.allowDrag {
+    text-decoration: none;
+    color: black;
+}
+
 .task {
     padding: 2px;
     background: white;
